--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ entrypoints==0.3
 filelock==3.3.0
 gunicorn==20.1.0
 llvmlite==0.36.0
+menuinst==1.4.16
 Pillow==8.4.0
 platformdirs==2.4.0
 pycodestyle==2.8.0
