--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,39 @@
+arabic-reshaper==2.1.3
 asgiref==3.4.1
 autopep8==1.5.7
+backports.entry-points-selectable==1.1.0
+boto==2.49.0
+distlib==0.3.3
 Django==3.2.8
+django-extensions==3.1.5
+entrypoints==0.3
+filelock==3.3.0
+fpdf==1.7.2
+future==0.18.2
+graphviz==0.19
 gunicorn==20.1.0
+html5lib==1.1
+llvmlite==0.36.0
+menuinst==1.4.16
 Pillow==8.4.0
+platformdirs==2.4.0
 pycodestyle==2.8.0
+pycosat==0.6.3
+pycurl==7.43.0.6
+pydot==1.4.2
+pydotplus==2.0.2
+pyparsing==3.0.6
+pyPdf==1.13
+PyPDF2==1.26.0
+pyreadline==2.1
+python-bidi==0.4.2
 pytz==2021.3
+reportlab==3.6.2
+six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
+virtualenv==20.8.1
+webencodings==0.5.1
 whitenoise==5.3.0
+wincertstore==0.2
+xhtml2pdf==0.2.5
